--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -1,11 +1,13 @@
 # Set the interface (change to your actual interface)
 interface=eth0
 
+port=0
+
 # Define the DHCP range and lease time
 dhcp-range=10.10.5.10,10.10.5.99,12h
 
 # Set the DHCP server IP (Gateway for clients)
-dhcp-option=3,10.10.5.2
+dhcp-option=3,10.10.5.1
 
 # Set the DNS server (Optional, use local or external)
 dhcp-option=6,8.8.8.8,8.8.4.4
