--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,5 @@ services:
     volumes:
       - ./dnsmasq.conf:/etc/dnsmasq.conf
       - ./dnsmasq-static.leases:/etc/dnsmasq-static.leases
+      - ./dnsmasq.leases:/var/lib/misc/dnsmasq.leases
     restart: unless-stopped
