--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,5 @@ services:
       - NET_ADMIN
     volumes:
       - ./dnsmasq.conf:/etc/dnsmasq.conf
+      - ./dnsmasq-static.leases:/etc/dnsmasq-static.leases
     restart: unless-stopped
