--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@techlabify/dnsmasq-with-rest",
   "version": "0.1.0",
-  "description": "",
+  "description": "A containerized dnsmasq (DHCP) server with REST API to add/list/remove static leases",
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
